--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+ 349 changes: 349 additions & 0 deletions 349  
+index.html
+ 
+@@ -0,0 +1,349 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,10 +52,18 @@
     <p>Current snake population: <span id="currentPopulation">0</span></p>
     <p>Current food: <span id="currentFood">0</span></p>
     <p>Current fights: <span id="currentFights">0</span></p>
-    <label for="maxFPS">Max FPS:</label>
-     <input type="number" id="maxFPS" min="0" value="60">
-     <label for="maxTPS">Max TPS:</label>
-     <input type="number" id="maxTPS" min="-1" value="60">
+    <label for="speed">Speed:</label>
+    <select id="speed">
+      <option value="0.25">0.25x</option>
+      <option value="0.5">0.5x</option>
+      <option value="1" selected>1x</option>
+      <option value="2">2x</option>
+      <option value="4">4x</option>
+      <option value="8">8x</option>
+      <option value="16">16x</option>
+      <option value="32">32x</option>
+      <option value="64">64x</option>
+    </select>
     <button onclick="killAllSnakes()">Kill All Snakes</button>
     <button onclick="clearSnakes()">Clear Snakes</button>
     <button onclick="spawnOneSnake()">Spawn 1 Snake</button>
@@ -114,7 +126,7 @@ class Snake {
     if (targetFood) {
       const dx = targetFood.x - this.segments[0].x;
       const dy = targetFood.y - this.segments[0].y;
-      
+
       if (dx !== 0) {
         this.direction.x = Math.sign(dx);
         this.direction.y = 0;
@@ -260,7 +272,7 @@ function gameLoop() {
       }
     }
   }
-  
+
   // Remove dead snakes and convert their segments into food
   deadSnakes.sort((a, b) => b - a); // Sort in reverse order to avoid index shifting
   deadSnakes.forEach((index) => {
@@ -281,7 +293,7 @@ function gameLoop() {
 
   currentPopulation = snakes.length;
   currentFood = foods.length;
-  
+
   updateStats();
 
   snakes.forEach((snake) => {
@@ -304,23 +316,8 @@ function gameLoop() {
     });
   });
 
-  let maxFPS = 60;
-let maxTPS = 10;
-
-// Adjusted timing based on maxFPS
-setTimeout(gameLoop, 1000 / maxFPS);
+  setTimeout(gameLoop, 1000 / speed); // Adjusted timing based on speed
 }
-
-function updateMaxFPS() {
-  maxFPS = parseInt(document.getElementById('maxFPS').value);
-}
-
-function updateMaxTPS() {
-  maxTPS = parseInt(document.getElementById('maxTPS').value);
-}
-
-document.getElementById('maxFPS').addEventListener('change', updateMaxFPS);
-document.getElementById('maxTPS').addEventListener('change', updateMaxTPS);
 
 document.getElementById('speed').addEventListener('change', function() {
   speed = parseFloat(this.value);
