--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -64,7 +64,7 @@ const FOOD_FREQUENCY = 5;
 const MAX_FOODS = 200;
 const SPLIT_LENGTH = 10;
 const MAX_SNAKE_AGE = 200;
-const REPRODUCTION_AGE = 60;
+const REPRODUCTION_AGE = 100;
 const REPRODUCTION_CHANCE = 0.1;
 let speed = 1;
 let FOOD_GENERATED_ON_START = 50;
